--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,6 @@ theme: hiker
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository:  git@github.com:kangzhanlei/kangzhanlei.github.io.git
+  branch: master
