--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: 简约即广阔
-subtitle:
+subtitle: 
 description: Less is More
-keywords:
+keywords: 学习笔记, 源码分析, 经验总结,个人博客
 author: kzl
 language: zh-CN
 timezone:
