--- a/themes/hiker/_config.yml
+++ b/themes/hiker/_config.yml
@@ -112,7 +112,7 @@ gitalk:
 # Available value:
 #    default | gray | normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night
+highlight_theme: night eighties
 
 
 # Article theme color
