--- a/themes/hiker/_config.yml
+++ b/themes/hiker/_config.yml
@@ -76,15 +76,7 @@ widgets:
 # Value is the target link (E.g. GitHub: https://github.com/iTimeTraveler)
 social:
   Github: https://github.com/kangzhanlei
-  Weibo: http://www.yoursite.com
-  Twitter: 
-  Facebook: 
-  Google-plus: 
-  Instagram: 
-  Pinterest: 
-  Flickr: 
-  email:
-
+  email: zhanleikang@gmail.com
 
 # Search
 search:
