--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme: hiker
-theme: next
+theme: hiker
+#theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
