--- a/themes/hiker/_config.yml
+++ b/themes/hiker/_config.yml
@@ -5,9 +5,9 @@
 # Header Menu
 menu:
   Home: /
-  Archives: archives
-  Categories: categories
   Tags: tags
+  Archives: archives
+  #Categories: categories
   About: about
 rss: /atom.xml
 
@@ -30,13 +30,13 @@ avatar:
 # eg. home_background_image: [css/images/home-bg.jpg, http://t.cn/RMbvEza]
 # eg. mode: image | polyline | trianglify
 home_background_image:
-  enable: true
+  enable: false
   mode: trianglify
   rolling: true
   url: [css/images/home-bg.jpg, css/images/sample.jpg, https://source.unsplash.com/collection/954550/1920x1080]
 
 home_logo_image:
-  enable: false
+  enable: true
   border: false
   url: css/images/homelogo.jpg
 
@@ -76,7 +76,7 @@ widgets:
 # Value is the target link (E.g. GitHub: https://github.com/iTimeTraveler)
 social:
   Github: https://github.com/kangzhanlei
-  email: zhanleikang@gmail.com
+  email: kangzhanlei@qq.com
 
 # Search
 search:
